Exercise-04 centered layout

--- a/week-06/CSS_Layout/Exercise-7/index.html
+++ b/week-06/CSS_Layout/Exercise-7/index.html
@@ -18,15 +18,27 @@
        <div class="layout">
            <div class="content">
                 <div class="upper-row">
-                    <div class="green-box"></div>
-                    <div class="green-box"></div>
+                    <div class="green-box-big">
+                        <p>
+                            Lorem ipsum dolor sit amet, ea zril essent mei, sed cu tollit mnesarchum, vel dolorum atomorum scribentur te. Eos meis nulla id. Ubique aperiri feugait vix eu, his et inimicus urbanitas consequuntur. Unum lorem feugait an duo, his ad iriure inimicus deseruisse, pro copiosae invidunt constituam cu. Harum dolores eu sea. Eu case munere pro, ne has soleat placerat.
+                        </p>
+                    </div>
+                    <div class="green-box-big">
+                        <p>
+                            Lorem ipsum dolor sit amet, ea zril essent mei, sed cu tollit mnesarchum, vel dolorum atomorum scribentur te. Eos meis nulla id. Ubique aperiri feugait vix eu, his et inimicus urbanitas consequuntur. Unum lorem feugait an duo, his ad iriure inimicus deseruisse, pro copiosae invidunt constituam cu. Harum dolores eu sea. Eu case munere pro, ne has soleat placerat.
+                        </p>
+                    </div>
                </div>
                <div class="bottom-row">
-                   <div class="green-box"></div>
-                   <div class="green-box">
+                   <div class="green-box-big">
+                       <p>
+                            Lorem ipsum dolor sit amet, ea zril essent mei, sed cu tollit mnesarchum, vel dolorum atomorum scribentur te. Eos meis nulla id. Ubique aperiri feugait vix eu, his et inimicus urbanitas consequuntur. Unum lorem feugait an duo, his ad iriure inimicus deseruisse, pro copiosae invidunt constituam cu. Harum dolores eu sea. Eu case munere pro, ne has soleat placerat.
+                       </p>
+                   </div>
+                   <div class="green-box-small">
                         <div class="red-box"></div>
                    </div>
-                   <div class="green-box">
+                   <div class="green-box-small">
                         <div class="red-box"></div>
                    </div>
                </div>
