--- a/week-06/Document-object-model/Content/Exercise2/index.html
+++ b/week-06/Document-object-model/Content/Exercise2/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Workshop: innerHTML, textContent</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <ul>
@@ -19,7 +20,7 @@
   2) change the <ul> element's background color to 'limegreen'
     - use css class to change the color instead of the style property
 </script>
-OR
-<script src="content-2.js"></script> -->
+OR-->
+<script src="content-2.js"></script>
 </body>
 </html>
