--- a/week-06/Document-object-model/Classlist/index.html
+++ b/week-06/Document-object-model/Classlist/index.html
@@ -3,27 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Workshop: ClassList</title>
-    <style>
-        .red {
-            color: red;
-        }
-        .balloon {
-            background-color: lime;
-            border-radius: 100%;
-        }
-        .pear {
-            background: lime;
-            padding: 2rem;
-            text-decoration: uppercase;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <p class="apple">apple</p>
 <p class="balloon">balloon</p>
 <p class="cat red-dot">cat</p>
 <p>dolphin</p>
-
 <!-- You can work in the html or in a separate js file. Like:
 <script>
   If the fourth p has a 'dolphin' class, replace apple's content with 'pear'
@@ -31,7 +17,7 @@
   Make apple red by adding a .red class
   Make balloon less balloon-like
 </script>
-OR
-<script src="classlist-1.js"></script> -->
+OR-->
+<script src="classlist-1.js"></script>
 </body>
 </html>
