--- a/week-06/Document-object-model/Create element/Exercise 1/index.html
+++ b/week-06/Document-object-model/Create element/Exercise 1/index.html
@@ -18,7 +18,7 @@
   Add a heading saying 'I can add elements to the DOM!' to the .container.
   Add an image, any image, to the container.
 </script>
-OR
-<script src="createelement-1.js"></script> -->
+OR-->
+<script src="createelement-1.js"></script>
 </body>
 </html>
