--- a/week-06/Document-object-model/Onclick/index.html
+++ b/week-06/Document-object-model/Onclick/index.html
@@ -14,8 +14,7 @@
 <script>
   Turn the party on and off by clicking the button. (the whole page)
 </script>
-OR
-<script src="events-1.js"></script> -->
+OR-->
+<script src="events-1.js"></script>
 </body>
 </html>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
