--- a/week-06/Document-object-model/SVG/greenfox-logo/index.html
+++ b/week-06/Document-object-model/SVG/greenfox-logo/index.html
@@ -220,7 +220,7 @@
 <!--
     Select left and right eyes
     They have #left_eye and #right_eye
-    trun their color (fill) to tomato
+    turn their color (fill) to tomato
 -->
 <script src="main.js"> </script>
 </body>
