--- a/week-06/Advanced-CCS/Fancy table/index.html
+++ b/week-06/Advanced-CCS/Fancy table/index.html
@@ -6,34 +6,35 @@
     <link rel="stylesheet" href="styles.css" type="text/css"/>
 </head>
 <body>
-
+<div class="layout">
     <table>
         <thead>
-            <th>Month</th>
-            <th>Sales</th>
+        <th>Month</th>
+        <th>Sales</th>
         </thead>
         <tbody>
-            <tr>
-                <td>January</td>
-                <td>$50,000.00</td>
-            </tr>
-            <tr>
-                <td>February</td>
-                <td>$10,000.00</td>
-            </tr>
-            <tr>
-                <td>March</td>
-                <td>$85,000.00</td>
-            </tr>
-            <tr>
-                <td>April</td>
-                <td>$56,000.00</td>
-            </tr>
-            <tr>
-                <td>May</td>
-                <td>$98,000.00</td>
-            </tr>
+        <tr>
+            <td>January</td>
+            <td>$50,000.00</td>
+        </tr>
+        <tr>
+            <td>February</td>
+            <td>$10,000.00</td>
+        </tr>
+        <tr>
+            <td>March</td>
+            <td>$85,000.00</td>
+        </tr>
+        <tr>
+            <td>April</td>
+            <td>$56,000.00</td>
+        </tr>
+        <tr>
+            <td>May</td>
+            <td>$98,000.00</td>
+        </tr>
         </tbody>
     </table>
+</div>
 </body>
 </html>
