--- a/week-06/Advanced-CCS/Fancy table/index.html
+++ b/week-06/Advanced-CCS/Fancy table/index.html
@@ -12,6 +12,12 @@
         <th>Month</th>
         <th>Sales</th>
         </thead>
+        <tfoot>
+            <tr>
+                <td>May</td>
+                <td>$98,000.00</td>
+            </tr>
+        </tfoot>
         <tbody>
         <tr>
             <td>January</td>
@@ -28,10 +34,6 @@
         <tr>
             <td>April</td>
             <td>$56,000.00</td>
-        </tr>
-        <tr>
-            <td>May</td>
-            <td>$98,000.00</td>
         </tr>
         </tbody>
     </table>
