--- a/week-06/Advanced-CCS/Fancy table/index.html
+++ b/week-06/Advanced-CCS/Fancy table/index.html
@@ -15,25 +15,25 @@
         <tfoot>
             <tr>
                 <td>May</td>
-                <td>$98,000.00</td>
+                <td data-currency="$ " >98,000.00</td>
             </tr>
         </tfoot>
         <tbody>
         <tr>
             <td>January</td>
-            <td>$50,000.00</td>
+            <td data-currency="$ ">50,000.00</td>
         </tr>
         <tr>
             <td>February</td>
-            <td>$10,000.00</td>
+            <td data-currency="$ ">10,000.00</td>
         </tr>
         <tr>
             <td>March</td>
-            <td>$85,000.00</td>
+            <td data-currency="$ " >85,000.00</td>
         </tr>
         <tr>
             <td>April</td>
-            <td>$56,000.00</td>
+            <td data-currency="$ " >56,000.00</td>
         </tr>
         </tbody>
     </table>
