--- a/week-06/Advanced-CCS/Rounded buttons/index.html
+++ b/week-06/Advanced-CCS/Rounded buttons/index.html
@@ -6,6 +6,10 @@
     <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+<div class="container">
+    <button>Blue</button>
+    <button>Green</button>
+    <button>Red</button>
+</div>
 </body>
 </html>
