rounded buttons classes

--- a/week-06/Advanced-CCS/Rounded buttons/index.html
+++ b/week-06/Advanced-CCS/Rounded buttons/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <div class="container">
-    <button>Blue</button>
-    <button>Green</button>
-    <button>Red</button>
+    <button class="blue">Blue</button>
+    <button class="green">Green</button>
+    <button class="red">Red</button>
 </div>
 </body>
 </html>
