rounded buttons done

--- a/week-06/Advanced-CCS/Rounded buttons/index.html
+++ b/week-06/Advanced-CCS/Rounded buttons/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <div class="container">
-    <button class="blue">Blue</button>
-    <button class="green">Green</button>
-    <button class="red">Red</button>
+    <button class="button blue">Blue</button>
+    <button class="button green">Green</button>
+    <button class="button red">Red</button>
 </div>
 </body>
 </html>
