labelled buttons stop

--- a/week-06/Advanced-CCS/Labelled buttons/index.html
+++ b/week-06/Advanced-CCS/Labelled buttons/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <title>Labelled buttons</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
+            integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container">
-
-</div>
+    <button data-action="NaN" class="speech-bubble">
+        <i class="far fa-trash-alt fa-2x"></i>
+    </button>
+<script src="main.js"></script>
 </body>
 </html>
