--- a/week-06/Templating/cocktails/assets/index.html
+++ b/week-06/Templating/cocktails/assets/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Cocktails</h1>
 <div class="container">
-    <a href="">all</a>
+    <a href="/">all</a>
     <% alcoholList.forEach(e => { %>
     <a href="/?type=<%=e%>"><%=e%></a>
     <% }) %>
