--- a/week-07/XHR/Giphy API/index.html
+++ b/week-07/XHR/Giphy API/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Giphy API</title>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <div>
+<div class="container">
 
-    </div>
+</div>
+<script src="main.js"></script>
 </body>
 </html>
