--- a/week-07/XHR/star_wars_api/assets/index.html
+++ b/week-07/XHR/star_wars_api/assets/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>C
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="./assets/styles.css"/>
 </head>
 <body>
-<h1>HELLO</h1>
+<form class="container">
+    <label class="inputLabel">Enter charachter name</label>
+    <div class="inputButton">
+        <input type="text" class="charNameInput">
+        <button type="submit" value="Send Request" class="submitButton">search</button>
+    </div>
+</form>
 </body>
 </html>
