input's value is taken on button click

--- a/week-07/XHR/star_wars_api/assets/index.html
+++ b/week-07/XHR/star_wars_api/assets/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>C
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,8 +10,17 @@
     <label class="inputLabel">Enter charachter name</label>
     <div class="inputButton">
         <input type="text" class="charNameInput">
-        <button type="submit" value="Send Request" class="submitButton">search</button>
+        <button type="button" class="submitButton">search</button>
+    </div>
+    <div class="listContainer">
+        <ul class="charList">
+
+        </ul>
+        <ul class="movieList">
+
+        </ul>
     </div>
 </form>
+<script src="./assets/starwars.js"></script>
 </body>
 </html>
