--- a/week-07/Node.js and MySQL/bookstoreEndpoints/assets/index.html
+++ b/week-07/Node.js and MySQL/bookstoreEndpoints/assets/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Bookstore</title>
-    <link rel="stylesheet" href="./assets/styles.css"/>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-<h1>HELLO</h1>
+<script src="main.js"></script>
 </body>
 </html>
