--- a/week-08/EventListener/events-3/index.html
+++ b/week-08/EventListener/events-3/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Workshop: EventListeners</title>
+    <script src="./app.js"></script>
   </head>
   <body>
     <h1>No last pressed key</h1>
