--- a/week-08/EventListener/CandyGame/game.html
+++ b/week-08/EventListener/CandyGame/game.html
@@ -13,7 +13,7 @@
       <dt>Candies</dt>
       <dd class="candies">10</dd>
       <dt>Lollypops</dt>
-      <dd class="lollypops">🍭🍭🍭</dd>
+      <dd class="lollypops">🍭🍭🍭🍭🍭🍭🍭🍭🍭</dd>
       <dt>Candies / Second</dt>
       <dd class="speed">0</dd>
     </dl>
