--- a/week-08/EventListener/OneTimeClicker/index.html
+++ b/week-08/EventListener/OneTimeClicker/index.html
@@ -6,7 +6,7 @@
     <script src="./app.js"></script>
   </head>
   <body>
-    <button>Click me</button>
+    <button>Click me</button>í
 
     <!-- You can work in the html or in a separate js file. Like:
     <script>
