--- a/week-08/Forms/ButtonDisable/index.html
+++ b/week-08/Forms/ButtonDisable/index.html
@@ -14,15 +14,15 @@
             <legend>What is your favourite pet?</legend>
             <label class="favouritePetLabel">
                 <span class="favouritePetSpan">Dog</span>
-                <input value="Dog" type="radio" name="radioButtons" id="favouritePetRadio">
+                <input value="Dog" type="radio" name="radioButtons">
             </label>
             <label class="favouritePetLabel">
                 <span class="favouritePetSpan">Cat</span>
-                <input value="Cat" type="radio" name="radioButtons" id="favouritePetRadio">
+                <input value="Cat" type="radio" name="radioButtons">
             </label>
             <label class="favouritePetLabel">
                 <span class="favouritePetSpan">Viktor the goldfish</span>
-                <input value="Viktor" type="radio" name="radioButtons" id="favouritePetRadio">
+                <input value="Viktor" type="radio" name="radioButtons" id="Viktor">
             </label>
         </fieldset>
         <fieldset class="signUpCatFieldset">
@@ -36,8 +36,10 @@
                 <input value="No" type="radio" name="factsRadio" class="signUpCatInput">
             </label>
         </fieldset>
-        <button class="loveCats" disabled>I love cats</button>
-        <button class="signUp" disabled>Sign up</button>
+        <div class="buttonContainer">
+            <button class="loveCats" disabled>I love cats</button>
+            <button class="signUp" disabled>Sign up</button>
+        </div>
     </form>
 </body>
 
