--- a/week-08/Forms/MovieSelector/index.html
+++ b/week-08/Forms/MovieSelector/index.html
@@ -31,7 +31,7 @@
             <option value="Wayne's World" class="Drama">Wayne's World</option>
         </select>
     </div>
-    <span>The selected movie is: </span>
+    <span class="result">The selected movie is: -</span>
 </body>
 
 </html>
