--- a/week-08/Forms/Newsletter/assets/index.html
+++ b/week-08/Forms/Newsletter/assets/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Newsletter</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./server.js"></script>
+    <script src="./signup.js"></script>
 </head>
 
 <body>
