big area basic html structure and css

--- a/week-09/Grid/BigArea/bigArea.html
+++ b/week-09/Grid/BigArea/bigArea.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,20 @@
     <title>Big Area</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
+    <div class="container">
+        <div class="purple"></div>
+        <div class="purple"></div>
+        <div class="purple"></div>
+        <div class="purple"></div>
+        <div class="purple"></div>
+        <div class="green">
+            <div class="yellow"></div>
+        </div>
+    </div>
+
 </body>
+
 </html>
