database called from another js

--- a/week-09/QuizApp/static/game.html
+++ b/week-09/QuizApp/static/game.html
@@ -19,7 +19,7 @@
             <button class="answer" id="4"></button>
         </div>
     </div>
-    <a href="http://localhost:3000/questions">Manage questions</a>
+    <a href="http://localhost:3000/q">Manage questions</a>
 </body>
 
 </html>
