--- a/week-09/QuizApp/static/questions.html
+++ b/week-09/QuizApp/static/questions.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Questions</title>
     <link rel="stylesheet" href="../assets/css/questions.css">
     <script src="../assets/javascript/questions.js"></script>
 </head>
+
 <body>
     <h1>Manage questions</h1>
     <div class="questionsContainer">
@@ -13,7 +15,33 @@
     </div>
     <h1>Create a new question</h1>
     <div class="addContainer">
-        
+        <form>
+            <label>
+                <input type="text" placeholder="Type your question here">
+            </label>
+            <h3>Answers</h3>
+            <label>
+                <span>#1</span>
+                <input type="text" placeholder="Type your answer here">
+                <input type="radio">
+            </label>
+            <label>
+                <span>#2</span>
+                <input type="text" placeholder="Type your answer here">
+                <input type="radio">
+            </label>
+            <label>
+                <span>#3</span>
+                <input type="text" placeholder="Type your answer here">
+                <input type="radio">
+            </label>
+            <label>
+                <span>#4</span>
+                <input type="text" placeholder="Type your answer here">
+                <input type="radio">
+            </label>
+        </form>
     </div>
 </body>
+
 </html>
