--- a/week-09/QuizApp/static/questions.html
+++ b/week-09/QuizApp/static/questions.html
@@ -17,29 +17,30 @@
     <div class="addContainer">
         <form>
             <label>
-                <input type="text" placeholder="Type your question here">
+                <input type="text" placeholder="Type your question here" required>
             </label>
             <h3>Answers</h3>
             <label>
                 <span>#1</span>
-                <input type="text" placeholder="Type your answer here">
-                <input type="radio">
+                <input type="text" placeholder="Type your answer here" required>
+                <input type="radio" name="isCorrect" checked>
             </label>
             <label>
                 <span>#2</span>
-                <input type="text" placeholder="Type your answer here">
-                <input type="radio">
+                <input type="text" placeholder="Type your answer here" required>
+                <input type="radio" name="isCorrect">
             </label>
             <label>
                 <span>#3</span>
-                <input type="text" placeholder="Type your answer here">
-                <input type="radio">
+                <input type="text" placeholder="Type your answer here" required>
+                <input type="radio" name="isCorrect">
             </label>
             <label>
                 <span>#4</span>
                 <input type="text" placeholder="Type your answer here">
-                <input type="radio">
+                <input type="radio" name="isCorrect">
             </label>
+            <input type="submit" value="submit">
         </form>
     </div>
 </body>
